add routes, controllers, and errors
